[package]
name = "scanner"
version = "0.1.0"
authors = ["rumblefrog <contact@zhenyangli.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
notify = "5.0.0-pre.2"
segdisplay = { path = "../segdisplay" }
chrono = { version = "0.4", features = ["serde"] }
